argo-events/eventsource-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argoevents-route
  namespace: default
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "argo-event.hq.lightup.tw"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          namespace: argo-events
          name: github-eventsource-svc
          port: 12000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
